...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                    <EditText
                        android:id="@+id/userToDoEditText"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:gravity="start|bottom"
                        android:hint="@string/title"
...

                android:gravity="center"
                android:paddingTop="20dp"
                app:hintTextAppearance="@style/FloatingLabelTextAppearance">

                <EditText
                    android:id="@+id/userToDoDescription"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_weight="0"
                    android:gravity="start|bottom"
...

            </LinearLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/makeToDoFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_send_white_18dp"
            app:fabSize="normal"
...
