<?xml version="1.0" encoding="utf-8"?>

<androidx.appcompat.widget.Toolbar xmlns:tools="http://schemas.android.com/tools"
                                   tools:ignore="MissingPrefix"
                                   xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:id="@+id/toolbar"
                                   android:minHeight="?attr/actionBarSize"
                                   android:background="?attr/colorPrimary"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content">

    <!--<TextView-->
...
