<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:id="@+id/listItemLinearLayout"
              android:layout_marginBottom="1dp"
              android:gravity="center"
              android:orientation="horizontal"
              android:layout_height="wrap_content"
              xmlns:tools="http://schemas.android.com/tools">

...
